# codeagent-wrapper-node

./: .gitignore  AGMENT.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  baseline.json  package.json
.github/workflows/: rust-ci.yml
codeagent-wrapper-rs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  rustfmt.toml
codeagent-wrapper-rs/Formula/: codeagent.rb
codeagent-wrapper-rs/assets/: SKILL.md
codeagent-wrapper-rs/benches/: json_parser.rs  startup.rs
codeagent-wrapper-rs/docs/: CLI_PARAMETERS_COMPARISON.md  PERFORMANCE.md
codeagent-wrapper-rs/src/: agent_config.rs  backend.rs  cli.rs  config.rs  errors.rs  executor.rs  filter.rs  init.rs  logger.rs  main.rs  parser.rs  signal.rs  utils.rs
codeagent-wrapper-rs/tests/: cli_integration.rs
docs/: IPC_OPTIMIZATION.md  IPC_OPTIMIZATION_SUMMARY.md  PERFORMANCE.md
memories/2026-02-01/: rust-code-quality-session.json  rust-migration-session.json
openspec/changes/community-building/: proposal.md  tasks.md
openspec/changes/feature-enhancements/: proposal.md  tasks.md
openspec/changes/performance-optimization/: proposal.md  tasks.md
openspec/changes/real-time-progress-display/: proposal.md  tasks.md
src/: agent-config.mjs  backend.mjs  config.mjs  errors.mjs  executor.mjs  filter.mjs  init.mjs  logger.mjs  main.mjs  parser.mjs  process-check.mjs  signal.mjs  utils.mjs  wrapper-name.mjs
test/: backend-output.test.mjs  backend.test.mjs  config-validation.test.mjs  config.test.mjs  error-handling.test.mjs  ipc-optimization.test.mjs  parser.test.mjs  performance.test.mjs  progress-output.test.mjs  signal.test.mjs  utils.test.mjs
(+15 files in other folders)
