[package]
name = "codeagent-wrapper"
version = "0.1.0"
edition = "2024"
authors = ["codeagent-wrapper contributors"]
description = "A high-performance wrapper for AI CLI backends (Claude, Codex, Gemini, Opencode)"
license = "MIT"
repository = "https://github.com/user/codeagent-wrapper-rs"
keywords = ["cli", "ai", "wrapper", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codeagent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env", "string"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Regex
regex = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Path utilities
dirs = "5"

# Process utilities (for which command)
which = "7"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "json_parser"
harness = false

[[bench]]
name = "startup"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
